--- a/lesson_02/index.html
+++ b/lesson_02/index.html
@@ -1,12 +1,124 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework 2</title>
+    <title>Домашня робота №2</title>
 </head>
 <body>
-    <h1>Homework 2</h1>
-    
+    <!-- Header section -->
+    <header id="header">
+        <a href="https://belinskiy-and.github.io/lessons/">Головна</a> > <a href="https://belinskiy-and.github.io/lessons/lesson_02">Домашнє завдання № 2</a> > <span lang="eu">Front end</span> розробка - що це таке
+    </header>
+
+    <!-- Main section -->
+    <main>
+        <div>
+            <img src="img/img-1.jpg" alt="Технології Front end розробки">
+        </div>
+        <h1><span lang="eu">Front end</span> розробка</h1>
+        <p>Зміст</p>
+        <ol>
+            <li>
+                <a href="#p1">Що таке фронтенд?</a>
+                <ul>
+                    <li><a href="#p1-1">Компоненти фронтенд розробки</a></li>
+                </ul>
+            </li>
+            <li><a href="#p2">Головне завдання Frontend-розробника</a></li>
+            <li><a href="#p3">Кар’єра фронтенд-розробника</a></li>
+            <li><a href="#p4">Що повинен знати досвідчений фронтенд-розробник?</a></li>
+        </ol>
+        <p>Слово “фронтенд” все частіше можна зустріти не тільки на просторах мережі, але і в бесіді у звичайних дружніх тусовках. Напевно ви неодноразово задавалися питанням про те, хто такий фронтенд-розробник, які його завдання, чим він займається, і що таке фронтенд в принципі. У цьому матеріалі ми розповімо, що таке “фронтенд”, чим він відрізняється від “бекенда”, якими навичками потрібно володіти, щоб стати затребуваним фронтенд-розробником і яка заробітна плата може бути у новачка.</p>
+
+        <div>
+            <!-- Що таке фронтенд? -->
+            <div>
+                <h2 id="p1">Що таке фронтенд?</h2>
+                <p><mark>Frontend</mark> – це публічна частина web-додатків (веб-сайтів), з якою користувач може взаємодіяти і контактувати напряму. У Frontend входить відображення функціональних завдань призначеного для користувача інтерфейсу, що виконуються на стороні клієнта, а також обробка запитів користувачів. По суті, фронтенд – це все те, що бачить користувач при відкритті web-сторінки.</p>
+                <h3 id="p1-1">Компоненти фронтенд розробки:</h3>
+                <ul>
+                    <li><mark>HTML</mark> (HyperText Markup Language) кажучи простими словами – це мова розмітки всіх елементів і документів на сторінці, і їх взаємодія в структурі сторінки.</li>
+                    <li><mark>CSS</mark> (Cascading Style Sheets) – це мова характеристики і стилізації зовнішнього вигляду документа. За допомогою CSS-коду браузер розуміє, як саме необхідно відображати елементи. CSS створює шрифти, кольори, визначає розташування блоків сайту, та інше. Також адаптує один і той же документ в різних стилях, виводить передачу на екран або для читання голосом.</li>
+                    <li><mark>JavaScript</mark> – мова, створена оживляти веб-сторінки. Завдання JavaScript – відгукуватися на дії користувача, обробляти натискання клавіш, переміщення курсора, кліки мишкою. JavaScript також дає можливість вводити повідомлення, посилати запити на сервер, а також завантажує дані без перезавантаження сторінки</li>
+                </ul>
+            </div>
+
+            <!-- Головне завдання Frontend-розробника -->
+            <div>
+                <h2 id="p2">Головне завдання Frontend-розробника</h2>
+                <p>Якщо ви маєте творчий підхід до роботи, бажаєте розробляти і створювати динамічні інтерфейси, вам однозначно дорога у фронтенд.</p>
+                <p>Вся фронтенд розробка виконується на стороні користувача, вона не менш важлива ніж бекенд розробка (про неї ми також згадаємо трохи нижче). Основне завдання фронтенд фахівця – це зв’язати представлені дизайнером графічні макети у web-додатку (сторінках сайту) з бекендом і за необхідності реалізувати обчислювальний функціонал на стороні користувача. Основні технології в арсеналі фронтендера це HTML, CSS і JavaScript. Звичайно, при роботі в команді потрібно знати і розбиратися в багатьох процесах, суміжних з роботою фронтенд-розробки . Будучи вже досвідченим фронтенд-розробником потрібно бути знайомим з бекенд-технологіями і розуміти принципи взаємодії користувача і з додатками (UX).</p>
+            </div>
+
+            <!-- Кар’єра фронтенд-розробника -->
+            <div>
+                <h2 id="p3">Кар’єра фронтенд-розробника</h2>
+                <p>Найчастіше кар’єра frontend-розробника починається з верстальника і тестувальника. В процесі роботи вивчається <mark>HTML</mark> + <mark>CSS</mark>, далі здобуваються знання <mark>JavaScript</mark>, бібліотек і фреймворків. Потім вивчаються основні поняття побудови серверної частини, паралельно додаючи інструменти, відповідно до обраної спеціалізації. Додатково напрацьовуються навички роботи з графічними редакторами і розумінням принципів UI / UX дизайну і, звичайно ж, софт-скіли.</p>
+                <p>В цілому, можливі такі основні шляхи розвитку фронтенд девелопера:</p>
+                <ul>
+                    <li>оризонтальний (розвиватися, рости як фахівець, що значно підвищить попит на ринку праці) – пробувати себе в різних проектах, постійно вивчати нові технології;</li>
+                    <li>ертикальний (зростання по кар’єрних сходинках) – покращувати навички та рівень їх володіннями в рамках однієї компанії;</li>
+                    <li>диверсифікаційний (паралельне вивчення суміжних спеціальностей, перекваліфікація) – наприклад, почати з фронтенда і перейти на бекенд.</li>
+                </ul>
+            </div>
+
+            <!-- Що повинен знати досвідчений фронтенд-розробник? -->
+            <div>
+                <h2 id="p4">Що повинен знати досвідчений фронтенд-розробник?</h2> 
+                <p>Останнім часом вакансія фронтенд-розробника досить затребувана і актуальна на сайтах з пошуку роботи. У той же час можна зустріти масу вакансій суміжних або схожих за обов’язками з фронтенд-розробниками. Важливо відзначити, що багато хто все ж плутає вакансію фронтенд-розробника з верстальником сайту або дизайнером. В деякій мірі, вивчивши ринок праці складається враження, що фронтенд-розробник – це людина-машина, яка надає цілий спектр послуг, такий собі різноробочий в IT просторі.</p> 
+                <p>Фронтенд-розробник розуміє роботу препроцесорів GULP, LESS, SASS, GRUNT, працює з SVG-об’єктами, DOM, API, AJAX і CORS і так далі. Крім усього іншого є розуміння принципів адаптивної і інтерактивної верстки, UI / UX-проектування, крос-браузерності і крос-платформенності, базового тестування, можливо, також, і знання навичок мобільної розробки. Фронтенд девелопер високого рівня також вміє використовувати графічні редактори, працює з контролем версій Git, GitHub, CVS, з шаблонами різних CMS. Варто відзначити, що дуже важливо також і знання англійської мови на рівні вільного спілкування з замовниками і читання документації.</p>
+                <p>Щоб стати затребуваним і досвідченим фахівцем в області фронтенда розробки , необхідно освоїти наступні технології:</p>
+                <ul>
+                    <li>HTML і CSS (в тому числі сітки і CSS-фреймворки, специфікації W3C і WHATWG, HTML5 / CSS3 Polyfills);</li>
+                    <li>вільно працювати з JavaScript;</li>
+                    <li>озуміти логіку роботи клієнт-серверної архітектури в контексті написання реальних програм;</li>
+                    <li>Знати популярні бібліотеки і феймворки: React.js, jQuery, Angular.JS, Redux, Backbone.js, розуміти принципи побудови сучасних односторінкових додатків (Single Page Application);</li>
+                    <li>препроцесорів CSS (Sass, Less, Stylus і т. д.);</li>
+                    <li>популярних CMS (WordPress, Drupal, Joomla і т.д.);</li>
+                    <li>OOCSS / BEM / SMACSS;</li>
+                    <li>ECMAScript 6;</li>
+                    <li>DOM;</li>
+                    <li>JavaScript транспайлери (Babel);</li>
+                    <li>Інструменти дебаггінгу (Chrome Dev Tools, Firebug і так далі);</li>
+                    <li>Інструменти контролю версій (Git, GitHub, CVS і так далі);</li>
+                    <li>Бази даних і мови запитів (SQL, MySql, NoSQL, MongoDB і так далі).</li>
+                </ul>
+                <div>
+                    <img src="img/html.png" alt="HTML">
+                    <img src="img/css.png" alt="CSS">
+                    <img src="img/sass.png" alt="SASS">
+                    <img src="img/javascript.png" alt="JavaScript">
+                    <img src="img/typescript.png" alt="TypeScript">
+                    <img src="img/github.png" alt="GitHub">
+                </div> 
+            </div>
+        </div>
+
+        <!-- Кнопка "Піднятись вгору" -->
+        <div>
+            <a href="#header">
+                <img src="img/top.png" alt="Button TOP">
+                Підняти вгору
+            </a>
+        </div>
+    </main>
+
+    <!-- Footer section -->
+    <footer>
+        <p>Посилання:</p>
+        <ul>
+            <li><a href="https://github.com" target="_blank">github.com</a></li>
+            <li><a href="https://youtube.com" target="_blank">YouTube</a></li>
+            <li><a href="https://linkedin.com/" target="_blank">LinkedIn</a></li>
+        </ul>
+
+        <p>Контакти:</p>
+        <ul>
+            <li>Україна, м. Київ, вул. Героїв України</li>
+            <li>+38 (050) 123-45-67</li>
+            <li>my-mail@mail.com</li>
+        </ul>
+    </footer>    
 </body>
 </html>
