--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Перелік домашніх завдань:</h1>
         <ol>
             <li><a href="#">Завдання 1</a></li>
-            <li><a href="/lesson_02/">Завдання 2</a></li>
+            <li><a href="lesson_02/">Завдання 2</a></li>
         </ol>
     </main>
 </body>
