--- a/lesson_02/index.html
+++ b/lesson_02/index.html
@@ -73,16 +73,54 @@
                     <li>HTML і CSS (в тому числі сітки і CSS-фреймворки, специфікації W3C і WHATWG, HTML5 / CSS3 Polyfills);</li>
                     <li>вільно працювати з JavaScript;</li>
                     <li>озуміти логіку роботи клієнт-серверної архітектури в контексті написання реальних програм;</li>
-                    <li>Знати популярні бібліотеки і феймворки: React.js, jQuery, Angular.JS, Redux, Backbone.js, розуміти принципи побудови сучасних односторінкових додатків (Single Page Application);</li>
-                    <li>препроцесорів CSS (Sass, Less, Stylus і т. д.);</li>
-                    <li>популярних CMS (WordPress, Drupal, Joomla і т.д.);</li>
+                    <li>Знати популярні бібліотеки і феймворки: 
+                        <ol>
+                            <li>React.js</li>
+                            <li>jQuery</li>
+                            <li>Angular.JS</li>
+                            <li>Redux</li>
+                            <li>Backbone.js</li>
+                        </ol>
+                    </li>
+                    <li>препроцесорів CSS:
+                        <ol>
+                            <li>Sass</li>
+                            <li>Less</li>
+                            <li>Stylus</li>
+                        </ol>
+                    </li>
+                    <li>популярних CMS:
+                        <ol>
+                            <li>WordPress</li>
+                            <li>Drupal</li>
+                            <li>Joomla</li>
+                        </ol>
+                    </li>
                     <li>OOCSS / BEM / SMACSS;</li>
                     <li>ECMAScript 6;</li>
                     <li>DOM;</li>
                     <li>JavaScript транспайлери (Babel);</li>
-                    <li>Інструменти дебаггінгу (Chrome Dev Tools, Firebug і так далі);</li>
-                    <li>Інструменти контролю версій (Git, GitHub, CVS і так далі);</li>
-                    <li>Бази даних і мови запитів (SQL, MySql, NoSQL, MongoDB і так далі).</li>
+                    <li>Інструменти дебаггінгу:
+                        <ol>
+                            <li>Chrome Dev Tools</li>
+                            <li>Firebug</li>
+                        </ol>
+                    </li>
+                    <li>Інструменти контролю версій:
+                        <ol>
+                            <li>Git</li>
+                            <li>GitHub</li>
+                            <li>CVS</li>
+                        </ol>
+                    </li>
+                    <li>Бази даних і мови запитів:
+                        <ol>
+                            <li>SQL</li>
+                            <li>MySql</li>
+                            <li>NoSQL</li>
+                            <li>MongoDB</li>
+                        </ol>
+                    </li>
                 </ul>
                 <div>
                     <img src="img/html.png" alt="HTML">
