--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <main>
         <h1>Перелік домашніх завдань:</h1>
         <ol>
-            <li><a href="#">Завдання 1</a></li>
-            <li><a href="lesson_02/">Завдання 2</a></li>
+            <li><a href="#">Заняття 1 Знайомство, основні правила та рекомендації для продуктивного навчання</a></li>
+            <li><a href="lesson_02/">Заняття 2 Введення в HTML, будова сторінки, теги, атрибути тегів</a></li>
+            <li><a href="lesson_02/">Заняття 3: Введення в CSS, обнулення стилів</a></li>
         </ol>
     </main>
 </body>
