--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="#">Заняття 1 Знайомство, основні правила та рекомендації для продуктивного навчання</a></li>
             <li><a href="lesson_02/">Заняття 2 Введення в HTML, будова сторінки, теги, атрибути тегів</a></li>
             <li><a href="lesson_03/">Заняття 3: Введення в CSS, обнулення стилів</a></li>
+            <li><a href="lesson_04/">Заняття 4: Шрифти, підключення шрифтів локально та з google fonts</a></li>
         </ol>
     </main>
 </body>
