--- a/lesson_04/index.html
+++ b/lesson_04/index.html
@@ -11,27 +11,37 @@
         <div lang="uk">
             <a href="https://belinskiy-and.github.io/lessons/" class="link">Головна</a> > <a href="https://belinskiy-and.github.io/lessons/lesson_04" class="link">Домашнє завдання № 4</a> > Перший день осені: коли листя змінить колір у Нью-Йорку
         </div>
+        <ul class="list">
+            <li class="item"><a href="#first-day-of-fall" class="link">First day of Fall</a></li>
+            <li class="item"><a href="#leaves-change-color" class="link">Here's when the leaves will change color in New York</a></li>
+            <li class="item"><a href="#why-change-colors" class="link">Why do leaves change colors?</a></li>
+            <li class="item"><a href="#what-is-fall" class="link">What is fall and the autumnal equinox?</a></li>
+            <li class="item"><a href="#when-winter-begin" class="link">When does winter begin?</a></li>
+            <li class="item"><a href="#portfolio-title" class="link">I am Professional User Experience Designer</a></li>
+            <li class="item"><a href="#presentation-title" class="link">About us</a></li>
+            <li class="item"><a href="#page-template-title" class="link">Introduce Your Product Quickly & Effectively</a></li>
+        </ul>
     </header>
     <main class="main">
-        <h1 class="title">First day of Fall: Here's when the leaves will change color in New York</h1>
+        <h1 class="title" id="first-day-of-fall">First day of Fall: Here's when the leaves will change color in New York</h1>
         <p><span class="city-name">New York City</span> - Fall has officially begun!</p>
         <p>Now it's time to order your pumpkin-spiced latte, put on a comfy sweatshirt, go apple picking and carve a pumpkin.</p>
         <p>Of course, there are lots of other fun <a href="https://www.fox5ny.com/news/fall-nyc-things-do" class="link" target="_blank">things to do this season too</a>.</p>
-        <h3 class="title">Here's when the leaves will change color in New York: </h3>
+        <h3 class="title" id="leaves-change-color">Here's when the leaves will change color in New York: </h3>
         <p><a href="https://www.iloveny.com/things-to-do/fall/foliage-report/#accordion-target" class="link" target="_blank">According to the iloveny.com's Fall Foliage report</a>. the leaves are just starting to change color now. </p>
         <p>The Adirondacks, Catskills, Thousand Island-Seaway, Capital-Saratoga, Central New York, Finger Lakes, and Greater Niagara regions are starting to display early signs of fall colors.</p>
         <p><a href="https://www.explorefall.com/fall-foliage-map" class="link" target="_blank">Explorefall.com reports</a> the estimated date for the leaves to peak in New York City is Nov. 8. Right now in New York City, there is little to no color.</p>
         <div><img src="img/map.jpg" alt="Map"></div>
         <p>By Oct. 1, nearly all the trees in the state will have started changing, along with most of Connecticut and all but small areas of southern New Jersey. Parts of the North Country, Mohawk Valley, and Capital Region will already be experiencing moderate to significant leaf color changes.</p>
 
-        <h2 class="title">Why do leaves change colors?</h2>
+        <h2 class="title" id="why-change-colors">Why do leaves change colors?</h2>
         <div><img src="img/central-park.jpg" alt="Central park"></div>
         <p>The vibrant colors of fall leaves are influenced not only by chlorophyll but also by weather conditions throughout the summer and early fall. </p>
         <p>Chlorophyll is the green pigment essential for photosynthesis, allowing trees to convert sunlight into energy.</p>
         <p>As chlorophyll breaks down in autumn, it reveals the beautiful yellows, oranges and reds beneath, especially after periods of ample rain.</p>
         <p>The fall color change starts in high-altitude regions of <a href="https://www.foxweather.com/category/alaska" class="link" target="_blank">Alaska</a> around mid-August and gradually moves southward, with areas along the Gulf Coast experiencing their peak color shifts in late November or early December.</p>
         <p>The most widespread changing of leaves is taking place throughout the Rockies but stands to pick up the pace over the next few weeks as the country heads into astronomical fall.</p>
-        <h2 class="title">What is fall and the autumnal equinox?</h2>
+        <h2 class="title" id="what-is-fall">What is fall and the autumnal equinox?</h2>
         <p>Fall is a transition season, meaning the hot weather pattern of summer begins to change to the cold weather pattern of winter. The result can be large fluctuations in temperatures, severe weather and the first snows of the season.</p>
         <p>The autumnal equinox is the moment when the sun crosses the equator, meaning those of us living in earth's Northern Hemisphere will begin seeing more darkness than light.</p>
         <p>The equinox is when the Earth's axis is tilted neither toward nor away from the sun. There are only two equinoxes each year, the vernal & autumnal.</p>
@@ -40,7 +50,7 @@
         </div>
         <p>The "nearly" equal hours of day and night are due to refraction of sunlight or a bending of the light's rays that causes the sun to appear above the horizon when the actual position of the sun is below the horizon. Additionally, the days become a little longer at the higher latitudes (those at a distance from the equator) because it takes the sun longer to rise and set. </p>
         <p>The autumnal equinox marks the beginning of astronomical fall, so it has no relation to temperatures, unlike meteorological fall.</p>
-        <h2 class="title">When does winter begin?</h2>
+        <h2 class="title" id="when-winter-begin">When does winter begin?</h2>
         <div>
             <img src="img/gapstow-bridge.jpg" alt="Gapstow Bridge">
         </div>
@@ -51,21 +61,21 @@
         <!-- Personal portfolio -->
 
         <div class="personal-portfolio">
-            <h2 class="personal-portfolio-title">I am Professional User Experience Designer</h2>
+            <h2 class="personal-portfolio-title" id="portfolio-title">I am Professional User Experience Designer</h2>
             <p class="personal-portfolio-text">I design and develop services for customers specializing creating stylish, modern websites, web services and online stores. My passion is to design digital user experiences.</p>
             <p class="personal-portfolio-text">I design and develop services for customers specializing creating stylish, modern websites, web services.</p>
         </div>
 
         <!-- Business Presentation -->
          <div class="business-presentation">
-            <h2 class="business-presentation-title">About us</h2>
+            <h2 class="business-presentation-title" id="presentation-title">About us</h2>
             <p class="business-presentation-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit etiam nec suscipit dui sed cursus nibh id risus ultrices convallis phasellus vel tristique diam ham placerat aliquet libero a aliquam nisl accumsan eget etiam ultrices.</p>
             <p class="business-presentation-text">At sed pretium ac condimentum in non arcu venenatis ac nulla nullam cursus morbi eget magna donec lacus fames sed fames fames erat tincidunt tellus sed vitae venenatis pulvinar orci nunc eget mauris venenatis dis nonid nibh.</p>
          </div>
 
          <!-- Landing Page Template -->
           <div class="landing-page-template">
-            <h2 class="landing-page-template-title">Introduce Your Product Quickly & Effectively</h2>  
+            <h2 class="landing-page-template-title" id="page-template-title">Introduce Your Product Quickly & Effectively</h2>  
             <p class="landing-page-template-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
                 mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
           </div>
