--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="lesson_02/">Заняття 2 Введення в HTML, будова сторінки, теги, атрибути тегів</a></li>
             <li><a href="lesson_03/">Заняття 3: Введення в CSS, обнулення стилів</a></li>
             <li><a href="lesson_04/">Заняття 4: Шрифти, підключення шрифтів локально та з google fonts</a></li>
+            <li><a href="lesson_05/">Заняття 5: CSS властивості блоків, відступи між елементами margin та padding</a></li>
         </ol>
     </main>
 </body>
