--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="lesson_04/">Заняття 4: Шрифти, підключення шрифтів локально та з google fonts</a></li>
             <li><a href="lesson_05/">Заняття 5: CSS властивості блоків, відступи між елементами margin та padding</a></li>
             <li><a href="lesson_06/">Заняття 6: CSS властивості оформлення блоків, властивість background</a></li>
+            <li><a href="lesson_07/">Заняття 7: Псевдокласи та псевдоелементи</a></li>
         </ol>
     </main>
 </body>
