--- a/lesson_08/index.html
+++ b/lesson_08/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Lesson 8</title>
 </head>
 <body>
+    <div class="wrapper">
+        <header class="header">
+            <div class="container">
+                <div>
+                    <a href="https://belinskiy-and.github.io/lessons/" class="link">Головна</a> > <a href="https://belinskiy-and.github.io/lessons/lesson_08" class="link">Домашнє завдання № 8</a> > Веб графіка, формати зображень
+                </div>
+            </div>
+        </header>
+        <main class="main">
+            <div class="container">
+                <div class="content">
+                    <h1 class="title">Формати та категорії зображень</h1>
+                    <div class="icons">
+                        <p class="text"><img src="img/icon-1.svg" alt="Icon" class="icon"> - іконка, векторне, svg</p>
+                        <p class="text"><img src="img/icon-2.svg" alt="Icon" class="icon"> - іконка, векторне, svg</p>
+                        <p class="text"><img src="img/icon-3.svg" alt="Icon" class="icon"> - іконка, векторне, svg</p>
+                        <p class="text"><img src="img/icon-4.svg" alt="Icon" class="icon"> - іконка, векторне, svg</p>
+                        <p class="text"><img src="img/icon-5.svg" alt="Icon" class="icon"> - іконка, векторне, svg</p>
+                        <p class="text"><img src="img/icon-6.svg" alt="Icon" class="icon"> - іконка, векторне, svg</p>
+                        <p class="text"><img src="img/icon-7.svg" alt="Icon" class="icon"> - іконка, векторне, svg</p>
+                    </div>
+                    <div class="contents-image">
+                        <p class="text"><img src="img/icon-1.svg" alt="Icon" class="icon"> - іконка, векторне, svg</p>    
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="footer"></footer>
+    </div>
     
 </body>
 </html>
