--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <li><a href="lesson_05/">Заняття 5: CSS властивості блоків, відступи між елементами margin та padding</a></li>
             <li><a href="lesson_06/">Заняття 6: CSS властивості оформлення блоків, властивість background</a></li>
             <li><a href="lesson_07/">Заняття 7: Псевдокласи та псевдоелементи</a></li>
+            <li><a href="lesson_08/">Заняття 8: Веб графіка, формати зображень</a></li>
+            <li><a href="lesson_09/">Заняття 9: Методологія БЕМ</a></li>
         </ol>
     </main>
 </body>
