--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="lesson_07/">Заняття 7: Псевдокласи та псевдоелементи</a></li>
             <li><a href="lesson_08/">Заняття 8: Веб графіка, формати зображень</a></li>
             <li><a href="lesson_09/">Заняття 9: Методологія БЕМ</a></li>
+            <li><a href="lesson_10/">Заняття 10: Позиціонування</a></li>
         </ol>
     </main>
 </body>
